--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lotide",
+  "name": "@chrisarsenault/lotide",
   "version": "1.0.0",
-  "description": "",
-  "main": "assertArrayEqual.js",
+  "description": "A mini clone of the Lodash library",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/chrisstanarsenault/lhl-lotide.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chris Arsenault",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chrisstanarsenault/lhl-lotide/issues"
